# EE215A-VLSI-Design-Automation-Project

./: CMakeLists.txt  README.md  run.sh
include/: clipp.h  parse.h  router.h
rpt/: performance.txt  ~$Router.pptx
src/: main.cpp  parse.cpp  plot.py  router.cpp
